--- a/metplotpy/plots/config/equivalence_testing_bounds_defaults.yaml
+++ b/metplotpy/plots/config/equivalence_testing_bounds_defaults.yaml
@@ -4,56 +4,79 @@ box_boxwex: 0.2
 box_notch: 'False'
 box_outline: 'True'
 box_pts: 'False'
-caption_align: 0
+caption_align: 0.0
 caption_col: '#333333'
-caption_offset: 3
+caption_offset: 3.0
 caption_size: 0.8
 caption_weight: 1
 cex: 1
-colors: []
-con_series: []
-derived_series_1: []
+colors:
+- '#ff0000'
+- '#8000ff'
+- '#00ff7f'
+con_series:
+- 1
+- 1
+- 1
+create_html: 'True'
+derived_series_1:
+- - ARWref_hrconus_control DPT ME
+  - ARWref_hrconus_experiment1 DPT ME
+  - ETB
 derived_series_2: []
-dump_points_1: 'False'
+dump_points_1: 'True'
 dump_points_2: 'False'
-event_equal: 'False'
-fcst_var_val_1: {}
+event_equal: 'True'
+fcst_var_val_1:
+  DPT:
+  - ME
 fcst_var_val_2: {}
 fixed_vars_vals_input: {}
-grid_col: '#f5274a'
+grid_col: '#cccccc'
 grid_lty: 3
 grid_lwd: 1
 grid_on: 'True'
 grid_x: listX
+high_eqbound: 0.001
+indy_label: []
 indy_stagger_1: 'False'
 indy_stagger_2: 'False'
 indy_vals: []
-indy_var: ''
+indy_var: fcst_lead
 legend_box: o
 legend_inset:
   x: 0.0
   y: -0.25
 legend_ncol: 3
 legend_size: 0.8
-line_type: N/A
-list_stat_1: []
+line_type: sl1l2
+list_stat_1:
+- ME
 list_stat_2: []
-list_static_val: {}
+list_static_val:
+  fcst_var: DPT
+low_eqbound: -0.001
 mar:
 - 8
 - 4
 - 5
 - 4
-method: ''
+method: bca
 mgp:
 - 1
 - 1
 - 0
 num_iterations: 1
 num_threads: -1
-plot_ci: []
-plot_disp: []
-plot_filename: /tmp/etb.png
+plot_caption: ''
+plot_ci:
+- none
+- none
+- none
+plot_disp:
+- 'True'
+- 'True'
+- 'True'
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
@@ -61,16 +84,36 @@ plot_type: png16m
 plot_units: in
 plot_width: 11.0
 random_seed: null
-series_line_style: []
-series_line_width: []
-series_order: []
-series_symbols: []
-series_type: []
-series_val_1: {}
+series_line_style:
+- '-'
+- '-'
+- '-'
+series_line_width:
+- 1
+- 1
+- 1
+series_order:
+- 1
+- 2
+- 3
+series_symbols:
+- .
+- .
+- .
+series_type:
+- b
+- b
+- b
+series_val_1:
+  model:
+  - ARWref_hrconus_control
+  - ARWref_hrconus_experiment1
 series_val_2: {}
 show_nstats: 'False'
-show_signif: []
-stat_input: ../line/line.data
+show_signif:
+- 'False'
+- 'False'
+- 'False'
 sync_yaxes: 'False'
 title: test title
 title_align: 0.5
@@ -78,7 +121,7 @@ title_offset: -2
 title_size: 1.4
 title_weight: 2.0
 user_legend: []
-variance_inflation_factor: 'True'
+variance_inflation_factor: 'False'
 vert_plot: 'False'
 x2lab_align: 0.5
 x2lab_offset: -0.5
@@ -120,3 +163,5 @@ ytlab_horiz: 0.5
 ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
+plot_filename: /tmp/etb.png
+stat_input: ../equivalence_testing_bounds/equivalence_testing_bounds.data
