--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -65,20 +65,20 @@ fcst_var_val_1:
 fcst_var_val_2:
 
 series_val_1:
-  # series_var1
+  # series_var_1
   model:
-    # series_val1
+    # series_val_1
     - GFS_0p25_G193
   # series_var2
   vx_mask:
-    # series_val1
+    # series_val_1
     - NH_CMORPH_G193
-    # series_val2
+    # series_val_2
     - SH_CMORPH_G193
-    # series_val3
+    # series_val_3
     - TROP_CMORPH_G193
 
-series_val2:
+series_val_2:
 list_stat_1:
   - FAR
   - PODY
