update comments for warnings

--- a/test/series_analysis/pytest.ini
+++ b/test/series_analysis/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
-#filter the matplotlib future deprecation warnings since this was developed using
-#matplotlib 3.3.3 and the warning impacts versions below this.
+#filter the matplotlib future deprecation warnings since code changes need to
+#be made in the Cartopy code, and not this code.
 filterwarnings =
     ignore
     default:::matplotlib.*
