--- a/test/roc_diagram/test_roc_diagram.yaml
+++ b/test/roc_diagram/test_roc_diagram.yaml
@@ -91,6 +91,7 @@ caption_align: .1 #0 # axis parallel location adjustment
 
 # Make the plot generated in METviewer interactive
 create_html: 'True'
-stat_input:  ./plot_20200507_074426.data
+# input file is relative to the roc_diagram.py module
+stat_input:  ./CTC_ROC_thresh.data
 plot_filename: ./roc_diagram_actual.png
 
