fixed the images names for the comparison

--- a/test/reliability_diagram/custom_reliability.yaml
+++ b/test/reliability_diagram/custom_reliability.yaml
@@ -179,6 +179,6 @@ ytlab_horiz: 0.5
 ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
-plot_filename: ./reliability.png
+plot_filename: ./reliability_expected.png
 stat_input: ./reliability.data
 
