--- a/test/wind_rose/wind_rose_custom.yaml
+++ b/test/wind_rose/wind_rose_custom.yaml
@@ -32,3 +32,4 @@ angularaxis_ticktext:
 plot_filename: ./wind_rose_default.png
 stat_input: ./point_stat_mpr.txt
 dump_points: True
+show_in_browser: False
