Github Issue #153 intermediary files: provide support for turning on/off the writing of intermediary file used by METviewer by setting dump_points_1 to True or False.

--- a/metplotpy/plots/performance_diagram/minimal_performance_diagram.yaml
+++ b/metplotpy/plots/performance_diagram/minimal_performance_diagram.yaml
@@ -4,3 +4,6 @@
 # set in the performance_diagram_defaults.yaml configuration file will be
 # used.
 
+# Write points file. Set to True for METviewer use,
+# False otherwise
+dump_points_1: 'False'
