--- a/metplotpy/plots/performance_diagram/custom_performance_diagram.yaml
+++ b/metplotpy/plots/performance_diagram/custom_performance_diagram.yaml
@@ -1,5 +1,9 @@
 ---
 # Custom settings specific to performance diagram plot
+# Write points file. Set to True for METviewer use,
+# False otherwise
+dump_points_1: 'True'
+
 # Line and marker plots of series data of Success Rate (1-FAR) on x-axis vs. PODY on y-axis.
 title: Performance Diagram ("Custom title")
 xaxis: Success Ratio
