Github Issue #153 revert to original, keep this simple to use all the settings in the default config file.

--- a/metplotpy/plots/performance_diagram/minimal_performance_diagram.yaml
+++ b/metplotpy/plots/performance_diagram/minimal_performance_diagram.yaml
@@ -1,10 +1,6 @@
 ---
 # Minimal settings specific to performance diagram plot
-# Almost all default values that are 
+# All default values that are
 # set in the performance_diagram_defaults.yaml configuration file will be
-# used (except for the dump_points_1 setting to avoid writing the intermediate file
-# used by METviewer).
+# used
 
-# Write points file. Set to True for METviewer use,
-# False otherwise
-dump_points_1: 'False'
