Github Issue #153 set the default behavior to write the intermediate file used by METviewer

--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -4,6 +4,10 @@
 title: Performance Diagram ("Default title")
 title_weight: 4
 
+# Write points file. Set to True for METviewer use,
+# False otherwise
+dump_points_1: 'True'
+
 # unsupported, Matplotlib align choices are left, right, center and
 # offset is automatically chosen to avoid labels and ticks on the topmost
 # x-axis
