--- a/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
+++ b/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
@@ -1,19 +1,9 @@
 ---
-roc_pct: False
-roc_ctc: True
+# Write points file. Set to True for METviewer use,
+# False otherwise
+dump_points_1: 'False'
 
-reverse_connection_order: False
-
-series_val_1: {}
-series_val_2: {}
-
-plot_disp:
-    - True
-series_order:
-    - 1
-stat_curve: 'None'
-add_point_thresholds: False
-event_equal: True
+# Title settings
 title: "Custom: ROC PCT 20200507_074426 "
 # value of 0.5 centers the title, smaller values moves text to the left
 title_align: 0.3
@@ -24,49 +14,51 @@ title_size: 1.5
 #1=plain text, 2=bold,3=italic,4=bold italic
 title_weight: 4
 
-xaxis: Custom POFD #"POFD (False Detection Rate)"
-yaxis_1: "PODY Custom"
-
-# X1 axis settings
-xlab_size:  1.75
-xlab_weight: 2
-xlab_offset: 0
-xtlab_horiz: 0.5
-xtlab_orient: 2
-xtlab_size: 1.2
-
-# Y1 axis settings
-ylab_size: 2.5
-ylab_weight: 1
-ylab_offset: 0
-# orientation: 0=-90 degrees, 1=0 degrees, 2=0 degrees, 3=-90 degrees
-ytlab_orient: 1
-ytlab_size: 0.9
 
 plot_width: 6
 plot_height: 6
 plot_res: 72
 plot_units: in
 
-colors:
-    - "#8000ff"
-series_symbols:
-    - "Small circle"
-series_type:
-    - 'joined lines'
-series_line_style:
-    - 'solid'
-series_line_width:
-    - 1
+roc_pct: False
+roc_ctc: True
+
+add_point_thresholds: False
+
+series_val_1: {}
+series_val_2: {}
+
 user_legend:
   - 'CTC ROC'
 
-legend_size: 0.8 # relative magnification
 legend_box: 'o' # legend box type - o: box, n: none
 legend_inset:
   x: 0.
   y: -0.14
+legend_size: 0.8 # relative magnification
 
+plot_disp:
+    - True
+
+series_order:
+    - 1
+
+stat_curve: 'None'
+
+colors:
+    - "#8000ff"
+series_symbols:
+    - "Small circle"
+series_line_width:
+        - 1
+series_type:
+    - 'joined lines'
+series_line_style:
+    - 'solid'
+
+event_equal: True
+
+# Caption settings
 plot_caption: "This is caption"
 # weight of text: 1=plain text, 2=bold, 3=italic, 4=bold italic
 caption_weight: 3
@@ -77,6 +69,26 @@ caption_size: 1.2 # relative magnification
 caption_offset: 2.9 #3  # axis perpendicular location adjustment
 #left-right positioning of caption. Reasonable values are between 0 and 1: 0=leftmost,1=rightmost
 caption_align: .1 #0 # axis parallel location adjustment
+
+# X1 axis settings
+xaxis: Custom POFD #"POFD (False Detection Rate)"
+xlab_offset: 0
+xlab_size:  1.75
+xlab_weight: 2
+xtlab_horiz: 0.5
+xtlab_orient: 2
+xtlab_size: 1.2
+
+# Y1 axis settings
+yaxis_1: "PODY Custom"
+ylab_offset: 0
+ylab_size: 2.5
+ylab_weight: 1
+# orientation: 0=-90 degrees, 1=0 degrees, 2=0 degrees, 3=-90 degrees
+ytlab_orient: 1
+ytlab_size: 0.9
+
+reverse_connection_order: False
 
 # Make the plot generated in METviewer interactive
 create_html: 'True'
