Github issue #153 by default, turn off creating intermediate points1 file used by METviewer

--- a/metplotpy/plots/config/roc_diagram_defaults.yaml
+++ b/metplotpy/plots/config/roc_diagram_defaults.yaml
@@ -4,7 +4,7 @@
 
 # Write points file. Set to True for METviewer use,
 # False otherwise
-dump_points_1: 'True'
+dump_points_1: 'False'
 
 # Title settings
 title: ROC CTC # required
