--- a/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
+++ b/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
@@ -1,7 +1,7 @@
 ---
 # Write points file. Set to True for METviewer use,
 # False otherwise
-dump_points_1: 'True'
+dump_points_1: 'False'
 
 # Title settings
 title: "Custom: ROC PCT 20200507_074426 "
