--- a/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
+++ b/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
@@ -4,6 +4,9 @@
 dump_points_1: 'False'
 # Optional, uncomment and set to directory to store the .points1 file
 # that is used by METviewer (created when dump_points_1 is set to True)
+# if dump_points_1 is True and this is uncommented, the points1 file
+# will be saved in the default location (i.e. where the input data file is stored).
+
 # points_path: '/dir_to_save_points1_file'
 
 # Title settings
