--- a/test/line/custom_line_groups2.yaml
+++ b/test/line/custom_line_groups2.yaml
@@ -87,13 +87,14 @@ plot_disp:
 - 'True'
 - 'True'
 - 'True'
-plot_filename: ./line_groups.png
+plot_filename: ./intermed_files/line_groups.png
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
 plot_type: png16m
 plot_units: in
 plot_width: 11.0
+points_path: ./intermed_files
 random_seed: null
 series_line_style:
 - '-'
