--- a/test/performance_diagram/custom_performance_diagram.yaml
+++ b/test/performance_diagram/custom_performance_diagram.yaml
@@ -1,5 +1,17 @@
 ---
 # Custom settings specific to performance diagram plot
+# Write points file. Set to True for METviewer use,
+# False otherwise
+dump_points_1: 'False'
+
+# Optional, uncomment and set to directory to store the .points1 file
+# that is used by METviewer (created when dump_points_1 is set to True)
+# if dump_points_1 is True and this is uncommented, the points1 file
+# will be saved in the default location (i.e. where the input data file is stored).
+#points_path: /dir_to_save_points1_file
+
+
+
 # Line and marker plots of series data of Success Rate (1-FAR) on x-axis vs. PODY on y-axis.
 title: Performance Diagram ("Custom title")
 xaxis: Success Ratio
@@ -59,9 +71,6 @@ fcst_var_val_1:
     - PODY
 fcst_var_val_2:
 user_legend:
-#  - NH
-#  - SH
-#  - TROP
    - NH
    - ''
    - TROP
@@ -97,4 +106,4 @@ series_line_style:
   - ":"
 stat_input:  ./plot_20200317_151252.data
 plot_filename: ./performance_diagram_actual.png
-event_equalize: False
+event_equal: False
