--- a/metplotpy/plots/config/roc_diagram_defaults.yaml
+++ b/metplotpy/plots/config/roc_diagram_defaults.yaml
@@ -111,5 +111,5 @@ ytlab_size: 1 #required
 reverse_connection_order: False
 
 create_html: True  #optional
-stat_input:  ../../../test/roc_diagram/plot_20200507_074426.data #required
+stat_input:  ../../test/roc_diagram/plot_20200507_074426.data #required
 plot_filename: ./roc_diagram_default.png #required
