--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -177,7 +177,7 @@ ylab_weight: 3
 ytlab_orient: 1
 ytlab_size: 1.3
 
-stat_input:  ../performance_diagram/plot_20200317_151252.data
+stat_input:  ../../test/performance_diagram/plot_20200317_151252.data
 plot_filename: ./performance_diagram_default.png
 
 
