--- a/test/box/minimal_box.yaml
+++ b/test/box/minimal_box.yaml
@@ -1,117 +1,6 @@
-alpha: 0.05
-box_avg: 'True'
-box_boxwex: 0.2
-box_notch: 'False'
-box_outline: 'True'
-box_pts: 'False'
-caption_align: 0.0
-caption_col: '#333333'
-caption_offset: 3.0
-caption_size: 0.8
-caption_weight: 1
-cex: 1
-colors:
-- '#8000ff'
-- '#ff0000'
-- '#00ff7f'
-- '#00aaff'
-con_series:
-- 1
-- 1
-- 1
-- 1
-create_html: 'False'
-derived_series_1:
-- - AFWAOCv3.5.1_d01 SPFH FBAR
-  - NoahMPv3.5.1_d01 SPFH FBAR
-  - DIFF
-derived_series_2: []
-dump_points_1: 'False'
-dump_points_2: 'False'
-eqbound_high: 0.001
-eqbound_low: -0.001
-event_equal: 'True'
-fcst_var_val_1:
-  SPFH:
-  - FBAR
-fcst_var_val_2:
-  SPFH:
-  - MAE
-fixed_vars_vals_input:
-  obtype:
-    obtype_1:
-    - ADPUPA
-  fcst_lev:
-    fcst_lev_2:
-    - P300
-  vx_mask:
-    vx_mask_0:
-    - CONUS
-grid_col: '#cccccc'
-grid_lty: 3
-grid_lwd: 1
-grid_on: 'True'
-grid_x: listX
-indy_label:
-- '12'
-- '24'
-indy_stagger_1: 'False'
-indy_stagger_2: 'False'
-indy_vals:
-- '120000'
-- '240000'
-indy_var: fcst_lead
-legend_box: o
-legend_inset:
-  x: 0.0
-  y: -0.25
-list_stat_1:
-- FBAR
-list_stat_2:
-- MAE
-method: bca
-mgp:
-- 1
-- 1
-- 0
-plot_caption: Caption simple example
-plot_ci:
-- none
-- none
-- none
-- none
-plot_disp:
-- 'True'
-- 'True'
-- 'True'
-- 'True'
-
-
-series_order:
-- 1
-- 2
-- 3
-- 4
-
-
-series_val_1:
-  model:
-  - AFWAOCv3.5.1_d01
-  - NoahMPv3.5.1_d01
-series_val_2:
-  model:
-  - AFWAOCv3.5.1_d01
-show_nstats: 'True'
-show_signif:
-- 'False'
-- 'False'
-- 'False'
-- 'False'
-sync_yaxes: 'False'
-title: Simple Example-Box
-xaxis: FCST_LEAD
-xaxis_reverse: 'False'
-
-stat_input: ./box.data
-plot_filename: ./default_box.png
-
+# minimal config file that uses all the settings in the
+# default configuration file, custom_box.yaml
+# leave "empty" to use all the settings in the line_default.yaml
+# as long as you have write permissions for the directory specified in the `plot_filename`
+# setting.
+#Otherwise, specify an appropriate plot_filename setting here (below this comment block)
