--- a/metplotpy/contributed/tc_rmw/plot_cross_section.yaml
+++ b/metplotpy/contributed/tc_rmw/plot_cross_section.yaml
@@ -1,58 +1,14 @@
-# Sample YAML configuration file for generating a wind cross-section plot
-# based on pressure or height (from vertical interpolation via METcalcpy module
+# Sample YAML configuration file for generating cross-section plots
+# based on height (from vertical interpolation via METcalcpy module
 # vertical_interpolation).
 
 
-#
-# Vertical coordinate information:
-#
+vertical_coord_name:
+    'lev'
 
-vertical_coord_type_in:
-# The input type of the vertical coordinate;
-# accepted values are 'pressure' or 'height'.
-# The 'height' type is obtained by applying the METcalcpy
-# vertical_interpolation module on 'pressure' input.
-  'pressure'
-#  'height'
+field:
+    'TMP'
 
-
-vertical_dim_name:
-  'pressure'
-#  'height'
-
-
-# vertical levels based on height
-#vertical_levels:
-#  - 100
-#  - 200
-#  - 500
-#  - 1000
-#  - 2000
-#  - 3000
-#  - 4000
-
-# for vertical levels based on pressure
-vertical_levels:
-  - 1000
-  - 250
-
-
-vertical_level_stepsize:
-  - -100
-  # the step size between levels (e.g. -100 mb when vertical level is by pressure
-  # or 200 meters when vertical level is by height)
-
-#  500
-
-# set contour level ranges for radial winds
-radial_contour_level_start: -2
-radial_contour_level_end: 2
-radial_contour_level_stepsize: 0.2
-
-# set contour level ranges for tangential winds
-tangential_contour_level_start: 5
-tangential_contour_level_end: 40
-tangential_contour_level_stepsize: 5
-
-
-
+contour_level_start: 280
+contour_level_end: 310
+contour_level_stepsize: 5
