--- a/test/bar/custom_bar.yaml
+++ b/test/bar/custom_bar.yaml
@@ -65,6 +65,13 @@ plot_stat: median
 plot_type: png16m
 plot_units: in
 plot_width: 11.0
+
+# Optional, uncomment and set to directory to store the .points1 file
+# that is used by METviewer (created when dump_points_1 is set to True)
+# if dump_points_1 is True and this is uncommented, the points1 file
+# will be saved in the default location (i.e. where the input data file is stored).
+#points_path: /dir_to_save_points1_file
+
 random_seed: null
 
 series_order:
