--- a/metplotpy/plots/config/taylor_diagram_defaults.yaml
+++ b/metplotpy/plots/config/taylor_diagram_defaults.yaml
@@ -1,9 +1,40 @@
 ---
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 # "Default" settings specific to the Taylor diagram plot
-#
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+# input file
+stat_input: ../../test/taylor_diagram/plot_20211217_180054.data
+
+# output file/plot
+plot_filename: ./plot_20211217_180054.png
+
 title: Taylor Diagram ("Default title")
 title_weight: 4
 title_size: 1.8
+
+
+
+# Event equalization to check for missing data
+event_equal: False
+fcst_var_val_1:
+  - DLWRF
+series_val_1:
+  # series_var_1
+  model:
+    # series_val_1
+    - suite3_MEDIAN
+  # series_var2
+  vx_mask:
+    # series_val_n n=1-7
+    - Bondville
+    - Desert Rock
+    - Fort Peck
+    - Goodwin Creek
+    - Penn State
+    - Sioux Falls
+    - Table Mountain
+
 
 # Unsupported actions by Matplotlib.
 # Matplotlib align choices are left, right, center and
@@ -12,17 +43,66 @@ title_size: 1.8
 title_align: 0.5
 title_offset: -2
 
-# Perform event equalization to check for missing data
-event_equal: False
+# x-axis ticks
+#these are unsupported
+xtlab_orient: 1
+xtlab_size: 1
+xtlab_perp: -0.75
+xtlab_horiz: 0.5
+xtlab_freq: 0
+x2tlab_orient: 1
+x2tlab_size: 0.8
+x2tlab_perp: 1
+x2tlab_horiz: 0.5
 
-#
-# ---unused settings---
+# y-axis ticks
+# these are unsupported
+ytlab_perp: 0.5
+ytlab_horiz: 0.5
+y2tlab_orient: 1
+y2tlab_perp: 0.5
+y2tlab_horiz: 0.5
+y2tlab_size: 1
+
+# second y-axis ticks
+# these are unsupported as this diagram doesn't have
+# a second y-axis
+y2lab_size: 1
+y2lab_offset: 1
+y2lab_align: 0.5
+
+# second x-axis settings, not necessary
+# for this diagram, expected by METviewer
+x2lab_size: 0.8
+x2lab_offset: -0.5
+x2lab_align: 0.5
+
+# magnification
+cex: 1
+
+# margins (Matplotlib doesn't have this level of granularity for margins)
+mar:
+  - 8
+  - 4
+  - 5
+  - 4
+
+# create html relevant only for Plotly interactivity in METviewer, not
+# applicable for Matplotlib plotting.
+create_html: 'False'
+
+# end of settings that are unsupported due to limitations in MATPLOTLIB
+
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+# ---unused or unsupported settings---
 # These settings are not relevant to the Taylor diagram,
-# do not change the values.
-#
-
+# or they are unsupported (but METviewer is expecting these settings)
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 dump_points_1: False
 dump_points_2: False
+# not relevant since there aren't any intermediate files being
+# created
+points_path: '' 
 vert_plot: False
 x_reverse: False
 num_stats: False
@@ -32,21 +112,22 @@ sync_axes: False
 log_y1: False
 log_y2: False
 
-# used in calculation of confidence intervals
+# used in the calculation of confidence intervals
 variance_inflation_factor: False
 
-# ---end of unused settings----
+series_type:
+  - "b"
+  - "b"
+  - "b"
+  - "b"
+  - "b"
+  - "b"
+  - "b"
 
-xaxis: Standard Deviation
-yaxis_1: Standard Deviation
-yaxis_2:
-
-# x-axis ticks
-#these are unsupported
-xtlab_orient: 1
-xtlab_size: 1
+# ---end of unused or unsupported settings----
 
 # x-axis labels
+xaxis: Standard Deviation
 xlab_size:  1
 #up-down positioning
 xlab_align: .5
@@ -56,6 +137,7 @@ xlab_offset: 2
 xlab_weight: 1
 
 # y-axis labels
+yaxis: Standard Deviation
 ylab_size: 1
 #left-right positioning
 ylab_align: 0.5
@@ -64,12 +146,51 @@ ylab_offset:  -2
 # text weight: plain text, bold, italic, bold italic
 ylab_weight: 1
 
-
 # y-axis ticks
 ytlab_orient: 1
 ytlab_size: 1.3
 
+# colors for each model, hexadecimal or color name
+colors:
+  - "#ff0000FF"
+  - "#ffd400FF"
+  - "#55ff00FF"
+  - "#00ff7FF"
+  - "00aaffFF"
+  - "1500ffFF"
+  - "#7f00ffFF"
+
+# legend settings
+use_legend:
+  - ""
+  - ""
+  - ""
+  - ""
+  - ""
+  - ""
+  - ""
+legend_box: 'box'
+legend_inset:
+  x: 0.0
+  y: -0.25
+legend_ncol: 4
+legend_size: 0.8
+
+# caption settings
+plot_caption: "Caption -Taylor Diagram default settings"
+caption_weight: 4
+caption_col: "#333333"
+# relative magnification of caption size
+caption_size: "0.8" # 1.3 in performance diagram
+# axis perpendicular location adjustment
+# (up/down 3.8 is max value, 2.9 is min value)
+caption_offset: 3
+# axis parallel location adjustment (left/right)
+caption_align: 0 # -.1 in performance diagram
+
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 # The underlying Taylor diagram (grid lines, etc.)
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 # Available choices are: solid line: "-", dashed line: "--", dotted line: ":"
 grid_lty: "--"
@@ -109,9 +230,23 @@ series_order:
   - 5
   - 6
   - 7
+
+# series symbols
+# Other supported symbols: small circle = ".", ring/hexagon = "H", rhombus/diamond="d"
+series_symbols:
+  # point
+  - "."
+  - "."
+  - "."
+  - "."
+  - "."
+  - "."
+  - "."
+
+
 con_series:
 # Only useful for line plots where consecutive points may be interspersed with NA values
-# no effect in Taylor diagram.
+# these values have no use for the Taylor diagram.
   - 1
   - 1
   - 1
@@ -119,6 +254,17 @@ con_series:
   - 1
   - 1
   - 1
+
+# not relevant for this plot, these values are expected by METviewer
+show_signif:
+  - 'False'
+  - 'False'
+  - 'False'
+  - 'False'
+  - 'False'
+  - 'False'
+  - 'False'
+
 
 
 
