--- a/test/performance_diagram/custom_performance_diagram.yaml
+++ b/test/performance_diagram/custom_performance_diagram.yaml
@@ -104,6 +104,6 @@ series_line_style:
   - "--"
   # dotted line
   - ":"
-stat_input:  ./plot_20200317_151252.data
+stat_input:  /Users/minnawin/feature_149_taylor_diagram/METplotpy/test/performance_diagram/plot_20200317_151252.data
 plot_filename: ./performance_diagram_actual.png
 event_equal: False
